# MSC_AI_Project

./: .gitignore  possible-plan.md
debugger-platforn/: .gitignore  ARCHITECTURE.md  HOW_TO_CHOOSE_AGENT.md  PLATFORM_ENHANCEMENT_STRATEGY.md  README.md  TEST_RESULTS.md  USAGE.md  agent_map_graph.mmd  analyze.py  coverage_builder.py  diagnose_failures.py  execute_tests.py  generate_tests.py  improve_agent.py  live_viewer.py  persona_builder.py  phase_a_code_analysis_plan.md  pyproject.toml  requirements.txt  run.sh  run_ai_validation.py  run_pipeline.py  scenario_builder.py  testsuite_builder.py
debugger-platforn/config/: framework_signatures.py
debugger-platforn/src/: endpoints_config.py
debugger-platforn/src/ai_analyzer/: analyzer.py  code_navigator.py  prompts.py
debugger-platforn/src/analysis/: static_analyzer.py  taint_analyzer.py
debugger-platforn/src/certification/: certifier.py  engine.py  models.py  scorer.py
debugger-platforn/src/coverage/: calculator.py  models.py
debugger-platforn/src/diagnosis/: clustering.py  engine.py  fix_generator.py  minimal_reproducer.py  models.py  priority_ranker.py  retry.py  root_cause_analyzer.py
debugger-platforn/src/execution/: agent_connector.py  aggregator.py  conversation_simulator.py  critic_agent.py  gan_simulator.py  llm_config.py  models.py  monitor.py  persona_context.py  runner.py
debugger-platforn/src/generator/: models.py  test_suite.py
debugger-platforn/src/graph/: behavioural_model.py  builder.py  fsm_inference.py  visualizer.py
debugger-platforn/src/improvement/: ab_testing.py  deployment_packager.py  engine.py  (+4 more)
debugger-platforn/tests/: sample_output.json  test_certification.py  test_diagnosis.py  test_improvement.py  test_persona_context.py  test_phase_a.py  test_pipeline.py
(+350 files in other folders)
