[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agent-analyzer"
version = "0.1.0"
description = "AI-powered agent code analysis system that discovers and maps agent architectures"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "networkx>=3.0",
    "anthropic>=0.40.0",
    "click>=8.0",
    "rich>=13.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
agent-analyzer = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
