[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-analyzer"
version = "0.1.0"
description = "AI-powered agent code analysis system that discovers and maps agent architectures"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.8.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "networkx>=3.0",
    "matplotlib>=3.8.0",
    "anthropic>=0.40.0",
    "click>=8.0",
    "rich>=13.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "websockets>=12.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
stats = [
    "scipy>=1.11.0",
    "numpy>=1.24.0",
]
ui = []  # websockets is now in main deps for Phase C --ui

[project.scripts]
agent-analyzer = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
